// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Dropdown closed dropdown 1`] = `
<span>
  <div
    style={
      Object {
        "display": "inline-block",
        "width": "16rem",
      }
    }
  >
    <div
      className="dropdown dropdownContainer"
    >
      <a
        className="dropdown__trigger dropdownTrigger"
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "padding": "5px 0",
              "width": "100%",
            }
          }
        >
          <i
            style={
              Object {
                "background": "#3A92D3",
                "borderRadius": "50%",
                "display": "inline-block",
                "height": "10px",
                "marginRight": "5px",
                "verticalAlign": "baseline",
                "width": "10px",
              }
            }
          />
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 500,
              }
            }
          >
            Engagements
          </span>
          <span
            style={
              Object {
                "marginLeft": "auto",
              }
            }
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#59626a",
                  "height": "0.75rem",
                  "width": "0.75rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="shuttleGray"
              >
                <path
                  d="M4.90573685,4.61438297 C4.5159485,4.22537555 4.51510793,3.59709045 4.90996552,3.20500565 L4.90996552,3.20500565 C5.30208929,2.81563546 5.93536183,2.81786315 6.32490003,3.21046581 L11.2750374,8.19954548 C11.6643604,8.59193123 11.6645756,9.22591178 11.2750374,9.61606213 L6.32490003,14.5739785 C5.93557705,14.9639132 5.3048231,14.9648641 4.90996552,14.5699959 L4.90996552,14.5699959 C4.51784174,14.1778616 4.51273549,13.5497061 4.9163418,13.1493324 L8.84038203,9.25672113 C9.03897712,9.05971665 9.04484713,8.74520064 8.84038203,8.54114518 L4.90573685,4.61438297 Z"
                  transform="translate(8.089966, 8.890003) scale(-1, 1) rotate(-270.000000) translate(-8.089966, -8.890003) "
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          className="dropdown__content dropdownContent"
        >
          <ol
            style={
              Object {
                "margin": 0,
                "padding": 0,
              }
            }
          >
            <li
              style={
                Object {
                  "listStyle": "none",
                  "padding": "10px",
                }
              }
            >
              <button
                aria-label={null}
                disabled={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "background": "none",
                    "backgroundColor": "unset",
                    "border": "none",
                    "borderRadius": "unset",
                    "color": "unset",
                    "cursor": "pointer",
                    "display": "unset",
                    "fontFamily": "unset",
                    "fontSize": "unset",
                    "fontWeight": "unset",
                    "lineHeight": "unset",
                    "margin": "unset",
                    "outline": "none",
                    "padding": 0,
                    "transition": "unset",
                    "width": "100%",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "textAlign": "left",
                      "width": "100%",
                    }
                  }
                >
                  <i
                    style={
                      Object {
                        "background": "#3A92D3",
                        "borderRadius": "50%",
                        "display": "inline-block",
                        "height": "10px",
                        "marginRight": "5px",
                        "verticalAlign": "baseline",
                        "width": "10px",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Engagements
                  </span>
                </span>
              </button>
            </li>
            <li
              style={
                Object {
                  "listStyle": "none",
                  "padding": "10px",
                }
              }
            >
              <button
                aria-label={null}
                disabled={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "background": "none",
                    "backgroundColor": "unset",
                    "border": "none",
                    "borderRadius": "unset",
                    "color": "unset",
                    "cursor": "pointer",
                    "display": "unset",
                    "fontFamily": "unset",
                    "fontSize": "unset",
                    "fontWeight": "unset",
                    "lineHeight": "unset",
                    "margin": "unset",
                    "outline": "none",
                    "padding": 0,
                    "transition": "unset",
                    "width": "100%",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "textAlign": "left",
                      "width": "100%",
                    }
                  }
                >
                  <i
                    style={
                      Object {
                        "background": "#FEC78B",
                        "borderRadius": "50%",
                        "display": "inline-block",
                        "height": "10px",
                        "marginRight": "5px",
                        "verticalAlign": "baseline",
                        "width": "10px",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Impressions
                  </span>
                </span>
              </button>
            </li>
          </ol>
        </div>
      </a>
    </div>
  </div>
</span>
`;

exports[`Snapshots Dropdown open dropdown 1`] = `
<span>
  <div
    style={
      Object {
        "display": "inline-block",
        "width": "16rem",
      }
    }
  >
    <div
      className="dropdown dropdownContainer"
    >
      <a
        className="dropdown__trigger dropdownTrigger dropdownTriggerActive"
        onClick={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "padding": "5px 0",
              "width": "100%",
            }
          }
        >
          <i
            style={
              Object {
                "background": "#FEC78B",
                "borderRadius": "50%",
                "display": "inline-block",
                "height": "10px",
                "marginRight": "5px",
                "verticalAlign": "baseline",
                "width": "10px",
              }
            }
          />
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 500,
              }
            }
          >
            Impressions
          </span>
          <span
            style={
              Object {
                "marginLeft": "auto",
              }
            }
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#59626a",
                  "height": "0.75rem",
                  "width": "0.75rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="shuttleGray"
              >
                <path
                  d="M4.90573685,3.83437656 C4.5159485,3.44536915 4.51510793,2.81708404 4.90996552,2.42499924 L4.90996552,2.42499924 C5.30208929,2.03562905 5.93536183,2.03785674 6.32490003,2.4304594 L11.2750374,7.41953907 C11.6643604,7.81192483 11.6645756,8.44590538 11.2750374,8.83605572 L6.32490003,13.7939721 C5.93557705,14.1839068 5.3048231,14.1848577 4.90996552,13.7899895 L4.90996552,13.7899895 C4.51784174,13.3978552 4.51273549,12.7696997 4.9163418,12.369326 L8.84038203,8.47671472 C9.03897712,8.27971024 9.04484713,7.96519423 8.84038203,7.76113877 L4.90573685,3.83437656 Z"
                  transform="translate(8.089966, 8.109997) scale(-1, -1) rotate(-270.000000) translate(-8.089966, -8.109997) "
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          className="dropdown__content dropdownContent dropdownContentActive"
        >
          <ol
            style={
              Object {
                "margin": 0,
                "padding": 0,
              }
            }
          >
            <li
              style={
                Object {
                  "listStyle": "none",
                  "padding": "10px",
                }
              }
            >
              <button
                aria-label={null}
                disabled={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "background": "none",
                    "backgroundColor": "unset",
                    "border": "none",
                    "borderRadius": "unset",
                    "color": "unset",
                    "cursor": "pointer",
                    "display": "unset",
                    "fontFamily": "unset",
                    "fontSize": "unset",
                    "fontWeight": "unset",
                    "lineHeight": "unset",
                    "margin": "unset",
                    "outline": "none",
                    "padding": 0,
                    "transition": "unset",
                    "width": "100%",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "textAlign": "left",
                      "width": "100%",
                    }
                  }
                >
                  <i
                    style={
                      Object {
                        "background": "#3A92D3",
                        "borderRadius": "50%",
                        "display": "inline-block",
                        "height": "10px",
                        "marginRight": "5px",
                        "verticalAlign": "baseline",
                        "width": "10px",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Engagements
                  </span>
                </span>
              </button>
            </li>
            <li
              style={
                Object {
                  "listStyle": "none",
                  "padding": "10px",
                }
              }
            >
              <button
                aria-label={null}
                disabled={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "background": "none",
                    "backgroundColor": "unset",
                    "border": "none",
                    "borderRadius": "unset",
                    "color": "unset",
                    "cursor": "pointer",
                    "display": "unset",
                    "fontFamily": "unset",
                    "fontSize": "unset",
                    "fontWeight": "unset",
                    "lineHeight": "unset",
                    "margin": "unset",
                    "outline": "none",
                    "padding": 0,
                    "transition": "unset",
                    "width": "100%",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "textAlign": "left",
                      "width": "100%",
                    }
                  }
                >
                  <i
                    style={
                      Object {
                        "background": "#FEC78B",
                        "borderRadius": "50%",
                        "display": "inline-block",
                        "height": "10px",
                        "marginRight": "5px",
                        "verticalAlign": "baseline",
                        "width": "10px",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Impressions
                  </span>
                </span>
              </button>
            </li>
          </ol>
        </div>
      </a>
    </div>
  </div>
</span>
`;

exports[`Snapshots HourlyChart [TESTED] loaded chart 1`] = `
<span>
  <div
    style={
      Object {
        "width": "800px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Hourly engagements
          </span>
        </h2>
      </header>
      <div
        className="sc-eHgmQL kcwTLE"
        id="js-dom-to-png-hourly-engagements"
      >
        <div>
          <section
            className="sc-hSdWYo gvgKOA"
          >
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "16rem",
                }
              }
            >
              <div
                className="dropdown dropdownContainer"
              >
                <a
                  className="dropdown__trigger dropdownTrigger"
                  onClick={[Function]}
                  style={
                    Object {
                      "display": "flex",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "padding": "5px 0",
                        "width": "100%",
                      }
                    }
                  >
                    <i
                      style={
                        Object {
                          "background": "#3A92D3",
                          "borderRadius": "50%",
                          "display": "inline-block",
                          "height": "10px",
                          "marginRight": "5px",
                          "verticalAlign": "baseline",
                          "width": "10px",
                        }
                      }
                    />
                    <span
                      style={
                        Object {
                          "color": "#323b43",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 500,
                        }
                      }
                    >
                      Engagements
                    </span>
                    <span
                      style={
                        Object {
                          "marginLeft": "auto",
                        }
                      }
                    >
                      <svg
                        height="100%"
                        style={
                          Object {
                            "fill": "#59626a",
                            "height": "0.75rem",
                            "width": "0.75rem",
                          }
                        }
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="100%"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlnsXlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          className="shuttleGray"
                        >
                          <path
                            d="M4.90573685,4.61438297 C4.5159485,4.22537555 4.51510793,3.59709045 4.90996552,3.20500565 L4.90996552,3.20500565 C5.30208929,2.81563546 5.93536183,2.81786315 6.32490003,3.21046581 L11.2750374,8.19954548 C11.6643604,8.59193123 11.6645756,9.22591178 11.2750374,9.61606213 L6.32490003,14.5739785 C5.93557705,14.9639132 5.3048231,14.9648641 4.90996552,14.5699959 L4.90996552,14.5699959 C4.51784174,14.1778616 4.51273549,13.5497061 4.9163418,13.1493324 L8.84038203,9.25672113 C9.03897712,9.05971665 9.04484713,8.74520064 8.84038203,8.54114518 L4.90573685,4.61438297 Z"
                            transform="translate(8.089966, 8.890003) scale(-1, 1) rotate(-270.000000) translate(-8.089966, -8.890003) "
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    className="dropdown__content dropdownContent"
                  >
                    <ol
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#FD8F90",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Retweets
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#FEC78B",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Impressions
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#3A92D3",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Engagements
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#D2C3AB",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Replies
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#98E8B2",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Clicks
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#8FC6DB",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Likes
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#ced7df",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Posts
                            </span>
                          </span>
                        </button>
                      </li>
                    </ol>
                  </div>
                </a>
              </div>
            </div>
            <span
              style={
                Object {
                  "marginLeft": "auto",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#666c72",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "0.75rem",
                    "fontWeight": 400,
                  }
                }
              >
                UTC 
                +02:00
              </span>
            </span>
          </section>
          <div>
            <ul
              className="sc-kkGfuU gieSId"
            >
              <li
                className="sc-iAyFgw cbzqSt"
              >
                <i
                  style={
                    Object {
                      "background": "#ced7df",
                      "borderRadius": "50%",
                      "display": "inline-block",
                      "height": "10px",
                      "marginRight": "5px",
                      "verticalAlign": "baseline",
                      "width": "10px",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "0.875rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Tweets
                </span>
              </li>
              <li
                className="sc-iAyFgw cbzqSt"
              >
                <i
                  style={
                    Object {
                      "background": "#3A92D3",
                      "borderRadius": "50%",
                      "display": "inline-block",
                      "height": "10px",
                      "marginRight": "5px",
                      "verticalAlign": "baseline",
                      "width": "10px",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "0.875rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Engagements
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots HourlyChart [TESTED] loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "800px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Hourly engagements
          </span>
        </h2>
      </header>
      <div
        className="sc-eHgmQL kcwTLE"
        id="js-dom-to-png-hourly-engagements"
      >
        <div
          className="sc-bwzfXH cXJzrG"
        >
          <div
            className="sc-bdVaJa fsNrov"
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots HourlyChart [TESTED] second metric selected 1`] = `
<span>
  <div
    style={
      Object {
        "width": "800px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Hourly engagements
          </span>
        </h2>
      </header>
      <div
        className="sc-eHgmQL kcwTLE"
        id="js-dom-to-png-hourly-engagements"
      >
        <div>
          <section
            className="sc-hSdWYo gvgKOA"
          >
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "16rem",
                }
              }
            >
              <div
                className="dropdown dropdownContainer"
              >
                <a
                  className="dropdown__trigger dropdownTrigger"
                  onClick={[Function]}
                  style={
                    Object {
                      "display": "flex",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "padding": "5px 0",
                        "width": "100%",
                      }
                    }
                  >
                    <i
                      style={
                        Object {
                          "background": "#3A92D3",
                          "borderRadius": "50%",
                          "display": "inline-block",
                          "height": "10px",
                          "marginRight": "5px",
                          "verticalAlign": "baseline",
                          "width": "10px",
                        }
                      }
                    />
                    <span
                      style={
                        Object {
                          "color": "#323b43",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 500,
                        }
                      }
                    >
                      Engagements
                    </span>
                    <span
                      style={
                        Object {
                          "marginLeft": "auto",
                        }
                      }
                    >
                      <svg
                        height="100%"
                        style={
                          Object {
                            "fill": "#59626a",
                            "height": "0.75rem",
                            "width": "0.75rem",
                          }
                        }
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="100%"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlnsXlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          className="shuttleGray"
                        >
                          <path
                            d="M4.90573685,4.61438297 C4.5159485,4.22537555 4.51510793,3.59709045 4.90996552,3.20500565 L4.90996552,3.20500565 C5.30208929,2.81563546 5.93536183,2.81786315 6.32490003,3.21046581 L11.2750374,8.19954548 C11.6643604,8.59193123 11.6645756,9.22591178 11.2750374,9.61606213 L6.32490003,14.5739785 C5.93557705,14.9639132 5.3048231,14.9648641 4.90996552,14.5699959 L4.90996552,14.5699959 C4.51784174,14.1778616 4.51273549,13.5497061 4.9163418,13.1493324 L8.84038203,9.25672113 C9.03897712,9.05971665 9.04484713,8.74520064 8.84038203,8.54114518 L4.90573685,4.61438297 Z"
                            transform="translate(8.089966, 8.890003) scale(-1, 1) rotate(-270.000000) translate(-8.089966, -8.890003) "
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    className="dropdown__content dropdownContent"
                  >
                    <ol
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#FD8F90",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Retweets
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#FEC78B",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Impressions
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#3A92D3",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Engagements
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#D2C3AB",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Replies
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#98E8B2",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Clicks
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#8FC6DB",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Likes
                            </span>
                          </span>
                        </button>
                      </li>
                      <li
                        style={
                          Object {
                            "listStyle": "none",
                            "padding": "10px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "background": "none",
                              "backgroundColor": "unset",
                              "border": "none",
                              "borderRadius": "unset",
                              "color": "unset",
                              "cursor": "pointer",
                              "display": "unset",
                              "fontFamily": "unset",
                              "fontSize": "unset",
                              "fontWeight": "unset",
                              "lineHeight": "unset",
                              "margin": "unset",
                              "outline": "none",
                              "padding": 0,
                              "transition": "unset",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "display": "inline-block",
                                "textAlign": "left",
                                "width": "100%",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "background": "#ced7df",
                                  "borderRadius": "50%",
                                  "display": "inline-block",
                                  "height": "10px",
                                  "marginRight": "5px",
                                  "verticalAlign": "baseline",
                                  "width": "10px",
                                }
                              }
                            />
                            <span
                              style={
                                Object {
                                  "color": "#59626a",
                                  "fontFamily": "\\"Roboto\\", sans-serif",
                                  "fontSize": "0.75rem",
                                  "fontWeight": 400,
                                }
                              }
                            >
                              Posts
                            </span>
                          </span>
                        </button>
                      </li>
                    </ol>
                  </div>
                </a>
              </div>
            </div>
            <span
              style={
                Object {
                  "marginLeft": "auto",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#666c72",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "0.75rem",
                    "fontWeight": 400,
                  }
                }
              >
                UTC 
                +02:00
              </span>
            </span>
          </section>
          <div>
            <ul
              className="sc-kkGfuU gieSId"
            >
              <li
                className="sc-iAyFgw cbzqSt"
              >
                <i
                  style={
                    Object {
                      "background": "#ced7df",
                      "borderRadius": "50%",
                      "display": "inline-block",
                      "height": "10px",
                      "marginRight": "5px",
                      "verticalAlign": "baseline",
                      "width": "10px",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "0.875rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Tweets
                </span>
              </li>
              <li
                className="sc-iAyFgw cbzqSt"
              >
                <i
                  style={
                    Object {
                      "background": "#3A92D3",
                      "borderRadius": "50%",
                      "display": "inline-block",
                      "height": "10px",
                      "marginRight": "5px",
                      "verticalAlign": "baseline",
                      "width": "10px",
                    }
                  }
                />
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "0.875rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Engagements
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots Title should render title as if for app 1`] = `
<span>
  <h2
    className="sc-kpOJdX hkatTF"
  >
    <span
      style={
        Object {
          "color": "#323b43",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 700,
        }
      }
    >
      Hourly engagements
    </span>
  </h2>
</span>
`;

exports[`Snapshots Title should render title as if for report 1`] = `
<span>
  <h2
    className="sc-kpOJdX hkatTF"
  >
    <span
      style={
        Object {
          "color": "#000",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 700,
        }
      }
    >
      Hourly engagements
    </span>
  </h2>
</span>
`;

exports[`Snapshots Tooltip 1 update 1`] = `
<span>
  <div>
    <div>
      <span
        style={
          Object {
            "color": "#cfcfcf",
            "fontSize": "8pt",
          }
        }
      >
        12 AM
         - 
        1 AM
      </span>
      <br />
      <br />
      <span>
        There was 
        <b>
          1
        </b>
         update
      </span>
       published between 
      <b>
        12 AM
      </b>
       and 
      <b>
        1 AM
      </b>
       and you earned:
      <br />
      <br />
    </div>
    <span>
      <i
        style={
          Object {
            "background": "#98E8B2",
            "borderRadius": null,
            "display": "inline-block",
            "height": "10px",
            "marginRight": "5px",
            "verticalAlign": "baseline",
            "width": "10px",
          }
        }
      />
      <b>
        0
         
        Clicks
      </b>
      <br />
    </span>
  </div>
</span>
`;

exports[`Snapshots Tooltip no updates 1`] = `
<span>
  <div>
    <div>
      <span
        style={
          Object {
            "color": "#cfcfcf",
            "fontSize": "8pt",
          }
        }
      >
        12 AM
         - 
        1 AM
      </span>
      <br />
      <br />
      <span>
        There were no updates
      </span>
       published between 
      <b>
        12 AM
      </b>
       and 
      <b>
        1 AM
      </b>
       and you earned:
      <br />
      <br />
    </div>
    <span>
      <i
        style={
          Object {
            "background": "#98E8B2",
            "borderRadius": null,
            "display": "inline-block",
            "height": "10px",
            "marginRight": "5px",
            "verticalAlign": "baseline",
            "width": "10px",
          }
        }
      />
      <b>
        0
         
        Clicks
      </b>
      <br />
    </span>
  </div>
</span>
`;

exports[`Snapshots Tooltip should render 1`] = `
<span>
  <div>
    <div>
      <span
        style={
          Object {
            "color": "#cfcfcf",
            "fontSize": "8pt",
          }
        }
      >
        12 AM
         - 
        1 AM
      </span>
      <br />
      <br />
      <span>
        There were a total of 
        <b>
          10
        </b>
         updates
      </span>
       published between 
      <b>
        12 AM
      </b>
       and 
      <b>
        1 AM
      </b>
       and you earned:
      <br />
      <br />
    </div>
    <span>
      <i
        style={
          Object {
            "background": "#98E8B2",
            "borderRadius": null,
            "display": "inline-block",
            "height": "10px",
            "marginRight": "5px",
            "verticalAlign": "baseline",
            "width": "10px",
          }
        }
      />
      <b>
        0
         
        Clicks
      </b>
      <br />
    </span>
  </div>
</span>
`;

exports[`Snapshots Tooltip two metrics 1`] = `
<span>
  <div>
    <div>
      <span
        style={
          Object {
            "color": "#cfcfcf",
            "fontSize": "8pt",
          }
        }
      >
        12 AM
         - 
        1 AM
      </span>
      <br />
      <br />
      <span>
        There were a total of 
        <b>
          10
        </b>
         updates
      </span>
       published between 
      <b>
        12 AM
      </b>
       and 
      <b>
        1 AM
      </b>
       and you earned:
      <br />
      <br />
    </div>
    <span>
      <i
        style={
          Object {
            "background": "#FEC78B",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": "10px",
            "marginRight": "5px",
            "verticalAlign": "baseline",
            "width": "10px",
          }
        }
      />
      <b>
        0
         
        Impressions
      </b>
      <br />
    </span>
    <span>
      <i
        style={
          Object {
            "background": "#98E8B2",
            "borderRadius": null,
            "display": "inline-block",
            "height": "10px",
            "marginRight": "5px",
            "verticalAlign": "baseline",
            "width": "10px",
          }
        }
      />
      <b>
        0
         
        Clicks
      </b>
      <br />
    </span>
  </div>
</span>
`;
